chore: add refresh token -- wip: e2e test is failing
